# algebraical

./: README.md  README.rst  pyproject.toml
.github/workflows/: lint-test-cover-docs.yml
docs/: conf.py  toc.rst
docs/_source/: algebraical.rst  arithmetical.rst  arithmetically.rst
src/algebraical/: __init__.py  algebraical.py
src/arithmetical/: __init__.py  arithmetical.py
src/arithmetically/: __init__.py  arithmetically.py
